# finance-mcp-server

./: .dockerignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/finance_mcp_server/: server.py
